--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <header>
         <nav>
-        <div class="navigation">
-            <div>
-                <h1>Irfan</h1>
-            </div>
-        </div>
-            </nav>
+            <h3 class="nav-title">Ir<span class="text-primary">f</span>an</h3>
+            <ul>
+               <li><a href=" ">Portfolio</a></li>
+               <li><a href=" ">Blog</a></li>
+               <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
     </header>
-    <body>
-        
-    
-    </body>
+    <main>
+
+    </main>
     <footer>
 
     </footer>
